--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <version>1.0</version>
             <systemPath>${project.basedir}/lib/cdata.jdbc.harperdb.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.11</version>
+        </dependency>
     </dependencies>
 
     <build>
